# pytap2

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.rst  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yml
src/pytap2/: __init__.py
tests/: test_pytap2.py
