[build-system]
requires = ["setuptools>=60.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
strict = true
platform = "linux"

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
src_paths = ["src/pytap2"]
skip_gitignore = true

[tool.coverage.run]
branch = true
source = ["pytap2", "tests/"]

[tool.coverage.paths]
source = [
    "src/pytap2",
    ".tox/*/lib/python*/site-packages/pytap2",
]
